# gaze

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  globals.css  globals.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  screenshot.rs  search.rs
src-tauri/src/gaze/: embed.rs  imghash.rs  keybinds.rs  mod.rs  ocr.rs  screenshot.rs  search.rs  state.rs  utils.rs  vdb.rs  window_appearance.rs
src/components/: SearchInput.tsx
src/layouts/: Search.tsx  Timeline.tsx
src/lib/: search.ts  timeline.ts
