[package]
name = "gleam"
version = "0.0.0"
description = "A Tauri App"
authors = ["vin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all",
  "shell-open",
  "global-shortcut",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4.3"
auto-launch = "0.5.0"
device_query = "2.1.0"
image = "0.25.1"
winapi = { version = "0.3.9", features = ["winuser"] }
xcap = "0.0.10"
global-hotkey = "0.5.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
