[package]
name = "gaze"
version = "0.0.0"
description = "A Tauri App"
authors = ["vin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "window-all",
  "shell-open",
  "global-shortcut",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4.3"
auto-launch = "0.5.0"
device_query = "2.1.0"
image = "0.25.1"
winapi = { version = "0.3.9", features = ["winuser"] }
xcap = "0.0.10"
global-hotkey = "0.5.4"
fastembed = "3.7.0"
faiss = "0.12.1"
rusty-tesseract = "1.1.10"
tokio = { version = "1.38.0", features = ["full"] }
rand = "0.8.5"
lancedb = "0.6.0"
arrow = "51.0"
arrow-array = "51.0"
arrow-schema = "51.0"
candle-core = "0.6.0"
imageproc = "0.25.0"
futures = "0.3.30"
ndarray = "0.15.3"
ndarray-npy = "0.7.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
